--- a/css/styles.css
+++ b/css/styles.css
@@ -36,11 +36,13 @@ h2 {
   font-style: italic;
   text-align: center;
 }
+
 h2 {
 font-family: 'Libre Baskerville', serif;
 }
 
 p {
+  display: inline-block
   line-height: 1.4em;
   letter-spacing: .1em;
   text-align: relative;
