--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,13 @@
+ul {
+  list-style-type: none;
+  margin: 0px;
+  padding: 0x;
+  margin-left: 0px;
+  margin-right: auto;
+  text-align: center;
+  position: fixed;
+}
+
 @font-face{
   font-family: 'Selectric Script';
   src: url('../fonts/Selectric Script.ttf') format('truetype');
@@ -78,10 +88,10 @@ p {
 }
 
 h3 {
+  color: tan;
   font-weight: bold;
   font-style: italic;
   text-align: center;
-  border: 1px solid black;
   margin: 10px 30px 40px 50px;
   padding: 10px;
   border-radius: 50px;
